--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
+    "firebase": "^8.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-twitter-embed": "^3.0.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
