--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^8.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "4.0.3",
     "react-twitter-embed": "^3.0.3",
     "typescript": "^4.2.4",
